<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Simplified Media Player</string>

    <string name="launcher_activity_title">Media Player</string>
    <string name="image_description">image_description</string>
    <string name="undefined_widget_time">--:--</string>

    <!-- Do not translate. Duration format for duration < 1 hour -->
    <string name="durationformatshort" translatable="false"><xliff:g id="format">%2$d:%5$02d</xliff:g></string>
    <!-- Do not translate. Duration format for duration >= 1 hour -->
    <string name="durationformatlong" translatable="false"><xliff:g id="format">%1$d:%3$02d:%5$02d</xliff:g></string>

    <string name="mass_storage_device">Mass storage device</string>
    <string name="iTunes">iTunes</string>
    <string name="android_usb_streaming">Android USB Streaming</string>
    <string name="car_play">Car Play</string>
    <string name="android_auto">Android Auto</string>

    <string name="title_activity_background_ui">BackgroundUIActivity</string>
    <string name="dummy_button">Close</string>
    <string name="carplay_connection">CarPlay\n...connecting...</string>

    <string name="aauto_connection">Android Auto\n...connecting...</string>

    <string name="carplay_port1">Port1: Disconnected</string>
    <string name="carplay_port2">Port2: Android Device</string>
    <string name="carplay_port3">Port3: iPhone</string>
    <string name="carplay_port4">Port4: Mass Storage Device</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
